// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionMessage /> renders AddKey with permission FullAccess 1`] = `
Array [
  "New key added for ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
  ": ed25519:BgXFiJS...",
  <p>
    with permission FullAccess and nonce 0
  </p>,
]
`;

exports[`<ActionMessage /> renders AddKey with permission function call 1`] = `
Array [
  "Access key added for contract ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/stake"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    stake
  </a>,
  ": ed25519:BgXFiJS...",
  <p>
    with permission to call [add_request,delete_request,confirm,add_request_and_confirm] methods and nonce 0
  </p>,
]
`;

exports[`<ActionMessage /> renders CreateAccount 1`] = `
Array [
  "New account created: ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders DeleteAccount 1`] = `
Array [
  "Account deleted: ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders DeleteKey 1`] = `"Key deleted: ed25519:BgXFiJS..."`;

exports[`<ActionMessage /> renders DeployContract 1`] = `
Array [
  "Contract deployed: ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders FunctionCall 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders FunctionCall with details 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver2.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver2.test
  </a>,
  <dl>
    <dt>
      Arguments:
    </dt>
    <dd>
      <div>
        <div
          style={
            Object {
              "display": "block",
              "height": "0px",
              "overflow": "hidden",
            }
          }
        >
          <textarea
            className="jsx-2493677144 code-preview"
            readOnly={true}
            value="{
  \\"text\\": \\"when ico?\\"
}"
          />
        </div>
        <div
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "float": "left",
              }
            }
          >
            Show more
          </div>
        </div>
      </div>
    </dd>
  </dl>,
]
`;

exports[`<ActionMessage /> renders Stake 1`] = `
Array [
  "Staked: ",
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    &lt;0.00001
     Ⓝ
  </span>,
  " ",
  "with ed25519:BgXFiJS...",
]
`;

exports[`<ActionMessage /> renders Transfer 1`] = `
Array [
  "Transferred ",
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    &lt;0.00001
     Ⓝ
  </span>,
  " to ",
  <a
    className="jsx-3150401870 account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;
